Add JS button logic, deleted playerInput promt, playerMove=getMoveName and switched with playerMove = argButtonName

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 <body>
     <div class="container">
-        <div id="buttons"></div>
+        <div id="buttons">
+            <button id="button-rock">Kamień</button>
+            <button id="button-paper">Papier</button>
+            <button id="button-scissors">Nozyce</button>
+        </div>
         <div id="messages"></div>
     </div>
     <script src="./js/functions.js"></script>
