Fix vars and turn into const and let, delete of button test declaration

--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 
 <body>
     <div class="container">
+        <div class="titlebox">
+            <h1>Papier, kamień, nożyce - <span>THE GAME</span></h1>
+            <p>Zmierz się ze mną !</p>
+        </div>
+        <div class="instruction">
+            <h2>Zasady Gry</h2>
+            <p>1. Kilknij odpowiedni klawisz</p>
+            <p>2. Sprawdź czy wygrałeś!</p>
+        </div>
         <div id="buttons">
-            <button id="button-rock">Kamień</button>
-            <button id="button-paper">Papier</button>
-            <button id="button-scissors">Nozyce</button>
+            <button class="skew-button" id="button-rock">Kamień</button>
+            <button class="skew-button" id="button-paper">Papier</button>
+            <button class="skew-button" id="button-scissors">Nożyce</button>
         </div>
         <div id="messages"></div>
     </div>
